--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -660,6 +660,34 @@ progress {
   }
 }
 
+.display-7 {
+  font-size: calc(1.325rem + 0.9vw);
+  font-weight: 300;
+  line-height: 1.2;
+}
+@media (min-width: 1200px) {
+  .display-7 {
+    font-size: 2rem;
+  }
+}
+
+.display-8 {
+  font-size: calc(1.275rem + 0.3vw);
+  font-weight: 300;
+  line-height: 1.2;
+}
+@media (min-width: 1200px) {
+  .display-8 {
+    font-size: 1.5rem;
+  }
+}
+
+.display-9 {
+  font-size: 1rem;
+  font-weight: 300;
+  line-height: 1.2;
+}
+
 .list-unstyled {
   padding-left: 0;
   list-style: none;
@@ -14196,6 +14224,10 @@ textarea.form-control-lg {
     display: none !important;
   }
 }
+.text-shadow-1 {
+  text-shadow: 0px 1px 10px rgba(0, 0, 0, 0.5);
+}
+
 body {
   overflow-x: hidden;
   font-family: -apple-system, BlinkMacSystemFont, sans-serif;
