--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,3 +1,5 @@
+@import "./mixins";
+
 $main-font: -apple-system, BlinkMacSystemFont, sans-serif;
 
 $twm-heading: (
@@ -5,3 +7,7 @@ $twm-heading: (
 	font-weight: 600,
 	text-transform: uppercase,
 );
+
+.text-shadow-1 {
+	text-shadow: 0px 1px 10px rgba(0, 0, 0, 0.5);
+}
