--- a/scss/bootstrap.scss
+++ b/scss/bootstrap.scss
@@ -3,21 +3,35 @@ $primary: #4ec3a0;
 // $secondary: #fb2056;
 
 $btn-close-width: 1.5em;
-$btn-close-padding-x: .5em;
+$btn-close-padding-x: 0.5em;
 
 // Spacing
 $spacer: 1rem !default;
 $spacers: (
-  0: 0,
-  1: $spacer * 0.25,
-  2: $spacer * 0.5,
-  3: $spacer,
-  4: $spacer * 1.5,
-  5: $spacer * 3,
-  6: $spacer * 6,
-  7: $spacer * 8,
-  8: $spacer * 12,
+	0: 0,
+	1: $spacer * 0.25,
+	2: $spacer * 0.5,
+	3: $spacer,
+	4: $spacer * 1.5,
+	5: $spacer * 3,
+	6: $spacer * 6,
+	7: $spacer * 8,
+	8: $spacer * 12,
 ) !default;
+
+//Display
+
+$display-font-sizes: (
+	1: 5rem,
+	2: 4.5rem,
+	3: 4rem,
+	4: 3.5rem,
+	5: 3rem,
+	6: 2.5rem,
+	7: 2rem,
+	8: 1.5rem,
+	9: 1rem,
+);
 
 $headings-margin-bottom: $spacer * 1;
 $line-height-base: 1.7;
@@ -26,13 +40,15 @@ $navbar-dark-color: #fff;
 
 $enable-negative-margins: true;
 
-
-
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Roboto:wght@400;700&display=swap");
 
 @import "../node_modules/bootstrap/scss/bootstrap";
-@import 'variables';
-body{
-  overflow-x: hidden;
-  font-family: -apple-system, BlinkMacSystemFont, sans-serif;
+@import "./variables";
+body {
+	overflow-x: hidden;
+	font-family: -apple-system, BlinkMacSystemFont, sans-serif;
 }
+
+// .text-shadow-1 {
+// 	text-shadow: 10, 10, 10, rgba(9, 226, 20, 0.5);
+// }
