--- a/scss/swiper/_swiper-slide.scss
+++ b/scss/swiper/_swiper-slide.scss
@@ -34,8 +34,25 @@
 			transform: translate(-50%, -50%);
 			color: white;
 			text-align: center;
+
 			font-size: 24px;
 			z-index: 100;
+
+			& .title-text {
+				position: relative;
+			}
+
+			& .title-text::after {
+				content: "";
+				position: absolute;
+				bottom: 0;
+				// display: flex;
+				// align-content: center;
+				left: 40%;
+				width: 10%; /* Make the underline span the entire width of the parent */
+				height: 2px; /* Set the height of the underline */
+				background-color: red; /* Set the color of the underline */
+			}
 		}
 	}
 }
